tests/variant_flow/switch_with_no_arms.err.expected
error: at 5:17: [VF-SwitchNoArms] In function 'f', block 'entry': switchEnum requires at least one arm
   |
 5 |                 switchEnum(v) [ ]
   |                 ^^^^^^^^^^^^^^^^^
